# Agentic-AI

./: .gitignore  main.py  pyproject.toml  weather_server.py
ADK-Agents/information_agent/: .env.example  agent.py  models.py  prompt.py
ADK-Agents/task_tracker_agent/: .env.sample  agent.py  models.py  prompt.py  tools.py
ADK-Agents/weather_agent/: agent.py  prompt.py
ADK-Agents/weather_agent/tools/: __init__.py  get_current_time_tool.py  get_weather_tool.py
ADK-Agents/welcome_agent/: agent.py
AutoGen/: main.py
AutoGen/agents/: search_assistant.py
AutoGen/configs/: settings.py
AutoGen/tools/: web_search.py
AutoGen/utils/: logger.py  ollama_client.py
Docs/: autogen.excalidraw
Mcp_Tool/: client.py  math_server.py
NoteBooks/: ChatBot_with_Tool.ipynb  Chatbot.ipynb  Human_in_Loop.ipynb  Streaming_ChatBot.ipynb
NoteBooks/.ipynb_checkpoints/: ChatBot_with_Tool-checkpoint.ipynb  Chatbot-checkpoint.ipynb
