[project]
name = "agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.3",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "langsmith>=0.4.1",
    "python-dotenv>=1.1.0",
]
